# ModelinAndSimulation

./: .gitignore  readme.md
docu/: deelopdracht1-30-11-2025-modeling.docx
simulation/: CMakeLists.txt
simulation/include/: callback.h  camera.h  mesh.h  model.h  renderer.h  shader.h
simulation/resources/models/: detectie.mtl  groundpane.mtl  hatchet.mtl  human.mtl  lamp.mtl  lampred.mtl
simulation/src/: callback.cpp  main.cpp  renderer.cpp
